[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Enemies.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemy/World Enemy/World_Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 3 )

[node name="World_Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 15
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 9
vframes = 7
frame = 55

[node name="Body_Shape" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 1 )
shape = SubResource( 1 )

[node name="Area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 15

[node name="Area_Shape" type="CollisionShape2D" parent="Area"]
position = Vector2( -0.5, 1 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Enemy_Animation" type="AnimationPlayer" parent="."]

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
